--- a/myTalks.html
+++ b/myTalks.html
@@ -66,6 +66,8 @@
       <br>TALK: Automationist's Gambit</li>
     <li>Customer event, June 14th, Online.
       <br>TALK: From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete</li>
+    <li><a href="https://www.meetup.com/software-testing-karlsruhe/events/284702637/">Software Testing Karlsruhe</a>
+      <br>TALK: Automationist's Gambit</li>
     <li><a href="https://www.codementor.io/events/contemporary-exploratory-testing-ekwhhkyqkg">CodeMentor, June 16th, Online</a>
       <br>TALK: Intro to Contemporary Exploratory Testing: Demo Session</li>
     <li><a href="https://www.meetup.com/test-automation-talks/events/285938225/">Test Automation Talks</a>, July 5th, 2022, Online.
@@ -104,23 +106,27 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 <h2>FULL LIST OF SPEAKING ENGAGEMENTS</h2>
 <div style="text-align: left;">
 
+<i>Targeting Errors of Omission</i><br />
+&nbsp; Keynote Speaker at Global Testing Retreat 2022, December 9-11th 2022, Online<br />
+<br />
+
 <i>The Automationist's Gambit</i><br />
-  &nbsp; Keynote Speaker at SANAE Software Testing BEER.EX (28-29.9.2022), Bratislava, Slovakia<br />
-  &nbsp; Speaker at Software Testing Karlsruhe meetup (14.6.2022), Online<br />
-  &nbsp; Speaker at Geekle QA Summit (16.2.2022), Online<br />
-  &nbsp; Speaker at QA Point Meetup (28.10.2021), Online<br />
-  &nbsp; Keynote Speaker at EuroSTAR (30.9.2021), Online<br />
-  &nbsp; Keynote Speaker at a customer organization (29.9.2021), Online<br />
+&nbsp; Keynote Speaker at SANAE Software Testing BEER.EX (28-29.9.2022), Bratislava, Slovakia<br />
+&nbsp; Speaker at Software Testing Karlsruhe meetup (14.6.2022), Online<br />
+&nbsp; Speaker at Geekle QA Summit (16.2.2022), Online<br />
+&nbsp; Speaker at QA Point Meetup (28.10.2021), Online<br />
+&nbsp; Keynote Speaker at EuroSTAR (30.9.2021), Online<br />
+&nbsp; Keynote Speaker at a customer organization (29.9.2021), Online<br />
 <br />
 
 <i>Breaking Illusions with Testing</i><br />
-  &nbsp; Speaker at TECH(K)NOW Day (8.3.2022), Online <a href="https://www.youtube.com/watch?v=oQXbs3awemg">[video]</a><br />
-  &nbsp; Keynote Speaker at German Testing Day (3-4.5.2021), Online<br />
-  &nbsp; Keynote Speaker at SLASSCOM Quality and Business Excellence Summit (10.3.2021), Online<br />
-  &nbsp; Keynote Speaker at JAX London (9.10.2019), London, United Kingdom<br />
-  &nbsp; Speaker at Agile Greece Summit (20.9.2019), Athens, Greece<br />
-  &nbsp; Keynote Speaker at DDD Europe (31.1-1.2.2019), Amsterdam, the Netherlands<br />
-  &nbsp; Speaker at Conferencia Agile Testers - Brazilian Online Conference (28.10.2018)<br />
+&nbsp; Speaker at TECH(K)NOW Day (8.3.2022), Online <a href="https://www.youtube.com/watch?v=oQXbs3awemg">[video]</a><br />
+&nbsp; Keynote Speaker at German Testing Day (3-4.5.2021), Online<br />
+&nbsp; Keynote Speaker at SLASSCOM Quality and Business Excellence Summit (10.3.2021), Online<br />
+&nbsp; Keynote Speaker at JAX London (9.10.2019), London, United Kingdom<br />
+&nbsp; Speaker at Agile Greece Summit (20.9.2019), Athens, Greece<br />
+&nbsp; Keynote Speaker at DDD Europe (31.1-1.2.2019), Amsterdam, the Netherlands<br />
+&nbsp; Speaker at Conferencia Agile Testers - Brazilian Online Conference (28.10.2018)<br />
 <br />
 
 <i>Contemporary Exploratory Testing</i><br />
@@ -148,21 +154,21 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 &nbsp; Trainer for Altom public course (1-day), Helsinki, Finland (6.5.2015)<br />
 <br />
 
+<i>Ensemble Testing</i><br />
+&nbsp; Speaker at Socrates (25-28.8.2022), Soltau, Germany<br />
+
 <i>A Practitioner's Guide to Contemporary Exploratory Testing</i><br />
-  &nbsp; Keynote Speaker at Axiom Summit Conference 2022, 14.5.2022, Online<br />
+&nbsp; Keynote Speaker at Axiom Summit Conference, 14.5.2022, Online<br />
 <br />
 
 <i>From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete</i></br />
-  &nbsp; Keynote Speaker at Testing Assembly 2022, 22.9.2022, Helsinki, Finland<br />
-  &nbsp; Speaker at Customer event, 14.6.2022, Helsinki, Finland<br />
-<br /> 
-
-<i>Targeting Errors of Omission</i><br />
-  &nbsp; Keynote Speaker at Global Testing Retreat 2022, December 9-11th 2022, Online<br />
+&nbsp; Keynote Speaker at Testing Assembly, 22.9.2022, Helsinki, Finland<br />
+&nbsp; Speaker at Customer event, 14.6.2022, Helsinki, Finland<br />
 <br />
 
 <i>Patterns to Whole Team Test Automation Transformation</i><br />
-  &nbsp; Speaker at Selenium Conference India / Virtual, 29-30.7.2022, Online<br />
+&nbsp; Speaker at Selenium Conference India / Virtual, 29-30.7.2022, Online<br />
+<br />
 
 <i>It's More Complicated that THAT!</i><br />
 &nbsp; Speaker at SauceCon (4-5.5.2022), Online<br />
@@ -195,6 +201,16 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 
 <i>Mobile Test Automation with Appium</i><br>
 &nbsp; Co-Facilitator with Ru Cindrea (17.2.2022), Online<br />
+<br />
+
+<i>Go Find What We May Have Missed</i><br />
+&nbsp; Speaker at customer event (10.1.2022), Online<br />
+&nbsp; Keynote Speaker at a testjsconf (18-19.11.2021), Online<br />
+<br />
+
+<i>Exploratory Testing on Programmatic (Computer) Interfaces</i><br />
+&nbsp; Session facilitator at Sanae BEER.EX (29.-30.9.2022), Bratislava, Slovakia<br />
+&nbsp; Session facilitator at Conference for Association for Software Testing (CAST) 2019 (12.8.2019), Cocoa Beach, Florida, USA<br />
 <br />
 
 <i>Hands-off Exploratory Testing - How to Manage Test at Scale</i> <a href="https://www.youtube.com/watch?v=uAPwRaKIa9E">[video]</a><br />
@@ -238,10 +254,6 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 &nbsp; Speaker at a MoT Sarajevo Meetup (27.10.2021), Online<br />
 <br />
 
-<i>Go Find What We May Have Missed</i><br />
-&nbsp; Speaker at customer event (10.1.2022), Online<br />
-&nbsp; Keynote Speaker at a testjsconf (18-19.11.2021), Online<br />
-<br />
 
 <i>Creating Career Opportunities in Quality Engineering</i><br />
 &nbsp; Panelist at mabl Experience (28.10.2021), Online. <br />
@@ -305,8 +317,6 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 <i>How to Increase Your Impact</i><br />
 &nbsp; Speaker at a customer organization (22.1.2021), Online<br />
 <br />
-
-
 
 <i>Exploratory Testing Work Course Condenced Half-Day Ed.</i><br />
 &nbsp; Trainer at a customer organization (20.12.2021), Online<br />
@@ -423,17 +433,13 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 &nbsp; Speaker at Serverless Architecture Conference 2019 (15.-16.10.2019), Berlin, Germany<br />
 <br />
 
-<i>Mob Programming</i><br />
+<i>Ensemble (Mob) Programming</i><br />
 &nbsp; Workshop facilitator at Agile Greece Summit (19.9.2019), Athens, Greece<br />
 &nbsp; Workshop facilitator at Testing Cup (10.6.2019), Poznan, Poland.<br />
 <br />
 
 <i>Internal Open Source</i><br />
 &nbsp; Speaker at Tech Excellence Conference (3.6.2019), Helsinki, Finland<br />
-<br />
-
-<i>Exploratory Testing on Computer Interfaces</i><br />
-  &nbsp; Trainer at Conference for Association for Software Testing (CAST) 2019 (12.8.2019), Cocoa Beach, Florida, USA<br />
 <br />
 
 <i>Practices Change - Moving to Delivering Continuously <a href="https://www.youtube.com/watch?v=J2qLwAFN7_8">[video]</a></i><br />
@@ -444,7 +450,7 @@ I make exceptions when I can travel with family since Feb 2022. <p>
   &nbsp; Speaker at Agile India (21.3.2019), Bengaluru, India<br />
 <br />
 
-<i>Next Level Teamwork: Pairing and Mobbing</i><br />
+<i>Next Level Teamwork: Pairing and Ensembling (Mobbing)</i><br />
   &nbsp; Keynote Speaker at TestBash Australia (19.10.2018), Sydney, Australia<br />
 <br />
 
@@ -545,7 +551,7 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 &nbsp; Speaker at Devoxx UK, London, UK (8.-10.6.2016)<br />
 <br />
 
-<i>Mob Testing -course (1 days)</i> <br />
+<i>Ensemble (Mob) Testing -course (1 days)</i> <br />
 &nbsp; Trainer at Testing Portugal Conference 2017, Sofia, Bulgaria (27.11.2017)<br />
 &nbsp; Trainer at Agile Testing Days 2017, Potsdam, Germany (13.11.2017)<br />
 &nbsp; Trainer at SEETEST Conference 2017, Sofia, Bulgaria (27.9.2017)<br />
@@ -575,7 +581,7 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 &nbsp; Finnish Software Testing, Helsinki Agile Testing -meetup, Helsinki, Finland (19.4.2017)<br />
 <br />
 
-<i>Mob Testing for Better Test Automation</i><br />
+<i>Ensemble (Mob) Testing for Better Test Automation</i><br />
 &nbsp; Test Automation Day, Rotterdam, the Netherlands (22.6.2017)<br />
 <br />
 
@@ -584,13 +590,13 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 &nbsp; Keynote Speaker at Swiss Testing Days, Zurich, Switzerland (16.2.2017)<br />
 <br />
 
-<i>A Mob Testing Experience (Facilitated Mobbing on Stage)</i><br />
+<i>A Ensemble (Mob) Testing Experience (Facilitated Ensembling (Mobbing) on Stage)</i><br />
 &nbsp; Facilitator at a customer organization, Helsinki, Finland (31.5.2018) <br />
 &nbsp; Speaker at NewCrafts Conference, Paris, France (18-19.5.2017)<br />
 &nbsp; Opening Speaker at TestBash Philly, Philadelphia, USA (10-11.11.2016)<br />
 <br />
 
-<i>Amplify Your Impact with Mob Testing </i><br />
+<i>Amplify Your Impact with Ensemble (Mob) Testing </i><br />
 &nbsp; Keynote speaker at UKStar, London, UK (27-28.2.2017) <br />
 <br />
 
@@ -609,7 +615,7 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 &nbsp; Speaker at FiSTB Testing Assembly, Helsinki, Finland (20-21.9.2016)<br />
 <br />
 
-<i>Mob Testing </i>[<a href="http://www.slideshare.net/maaretp/mob-testing">slides, mob exploratory testing emphasis</a>] [<a href="http://www.slideshare.net/maaretp/eurostar-webinar-mob-testing">slides, mob programming emphasis</a>]<br />
+<i>Ensemble (Mob) Testing </i>[<a href="http://www.slideshare.net/maaretp/mob-testing">slides, mob exploratory testing emphasis</a>] [<a href="http://www.slideshare.net/maaretp/eurostar-webinar-mob-testing">slides, mob programming emphasis</a>]<br />
 &nbsp; Speaker at Ministry of Testing Masterclass webinar, Online (15.3.2016)<br />
 &nbsp; Speaker at EuroSTAR webinar, Online (20.4.2016)<br />
 &nbsp; Speaker at Agile Testing Days Scandinavia, Gothenburg, Sweden (28.4.2016)<br />
@@ -637,7 +643,7 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 &nbsp; Speaker at Tech Excellence meetup in Helsinki, Finland (June 2016)<br />
 <br />
 
-<i>Facilitating a Security Testing Mob </i>with Dan Billing<br />
+<i>Facilitating a Security Testing Ensemble (Mob) </i>with Dan Billing<br />
 &nbsp; Facilitator at European Testing Conference 2016, Bucharest, Romania (12.2.2016)<br />
 <br />
 
@@ -723,11 +729,11 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 &nbsp;Speaker at DEWT peer conference, Driebergen, the Netherlands (01/2015)<br />
 <br />
 
-<i>Experiences of a tester in the Industry, Experience through Mob Testing</i><br />
+<i>Experiences of a tester in the Industry, Experience through Ensemble (Mob) Testing</i><br />
 &nbsp;Speaker and Facilitator at Aalto University of Applied Sciences, Helsinki, Finland (27.11.2015)<br />
 <br />
 
-<i>Mob Exploratory Testing Showdown: Testing Your Tool</i><br />
+<i>Ensemble (Mob) Exploratory Testing Showdown: Testing Your Tool</i><br />
 &nbsp;Facilitator at Software Testing Finland Event, Jyväskylä, Finland (11.10.2015)<br />
 <br />
 
