--- a/myTalks.html
+++ b/myTalks.html
@@ -107,7 +107,11 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 <div style="text-align: left;">
 
 <i>Targeting Errors of Omission</i><br />
-&nbsp; Keynote Speaker at Global Testing Retreat 2022, December 9-11th 2022, Online<br />
+&nbsp; Keynote Speaker at Global Testing Retreat, December 9-11th 2022, Online<br />
+<br />
+
+<i>A Practitioner's Guide to Contemporary Exploratory Testing</i><br />
+&nbsp; Keynote Speaker at Axiom Summit Conference, 14.5.2022, Online<br />
 <br />
 
 <i>The Automationist's Gambit</i><br />
@@ -156,10 +160,6 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 
 <i>Ensemble Testing</i><br />
 &nbsp; Speaker at Socrates (25-28.8.2022), Soltau, Germany<br />
-<br />
-
-<i>A Practitioner's Guide to Contemporary Exploratory Testing</i><br />
-&nbsp; Keynote Speaker at Axiom Summit Conference, 14.5.2022, Online<br />
 <br />
 
 <i>From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete</i></br />
