--- a/myArticles.html
+++ b/myArticles.html
@@ -168,8 +168,9 @@
 
 <h2>Positions of Responsibility</h2>
 <ul>
-  <li>2022-2023 Tivia ry Board of Directors, member of the board</li>
+  <li>2022-2023 Tivia ry / Tivia Infuture Oy / Tietotekniikan kehittämissäätiö Board of Directors, member of the board</li>
   <li>2014->    Ohjelmistotestaus ry (Software Testing Finland) Board of Directors, chairman and founder</li>
+  <li>2017      Agile Finland ry, member of the board</li>
   <li>1999-2009 Sytyke Testauksen osaamisyhteis&ouml; (Finnish Association for Software Testing), chairman</li>
 </ul>
 
