--- a/myTalks.html
+++ b/myTalks.html
@@ -64,7 +64,7 @@
   <ul>
     <li>Customer event, June 14th, Online.
       <br>TALK: From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete</li>
-    <li><a href="https://www.meetup.com/software-testing-karlsruhe/events/284702637/">Software Testing Karlsruhe</a>
+    <li><a href="https://www.meetup.com/software-testing-karlsruhe/events/284702637/">Software Testing Karlsruhe</a>, June 14th, Online.
       <br>TALK: Automationist's Gambit</li>
     <li><a href="https://www.codementor.io/events/contemporary-exploratory-testing-ekwhhkyqkg">CodeMentor, June 16th, Online</a>
       <br>TALK: Intro to Contemporary Exploratory Testing: Demo Session</li>
@@ -73,7 +73,8 @@
     <li><a href="https://conference.unicomseminars.org/agile-devops-software-testing-conference/apac-july/">UNICOM Agile,DevOps,Testing</a>, July 21-22th, Online.
        <br>TALK: How to Get Better at Exploratory Testing </li>
     <li><a href="https://confengine.com/conferences/selenium-conf-2022/proposal/16612/patterns-to-whole-team-test-automation-transformation">Selenium Conference India / Virtual</a>, July 29-30th, Online.
-        <br>TALK: Patterns to Whole Team Test Automation Transformation</li>
+        <br>TALK: Patterns to Whole Team Test Automation Transformation
+        <br>WORKSHOP: Ensemble Testing on Selenium 4, co-presented with Manoj Kumar</li>
     <li><a href="https://www.socrates-conference.de/home">Socrates 2022</a>, August 25-28th, Soltau, Germany
         <br>SESSION: Ensemble Testing</li>
     <li><a href="https://testingassembly.fistb.fi/seminar-2/">Testing Assembly</a>, Sept 21st and 22nd, Helsinki, Finland.
@@ -157,7 +158,11 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 <br />
 
 <i>Ensemble Testing</i><br />
-&nbsp; Speaker at Socrates (25-28.8.2022), Soltau, Germany<br />
+&nbsp; Session Facilitator at Socrates (25-28.8.2022), Soltau, Germany<br />
+<br />
+
+<i>Ensemble Testing on Selenium 4 (from geolocation to grid), co-presented Manoj Kumar</i><br />
+&nbsp; Workshop Facilitator at Selenium Conference India/Virtual (29-30.7.2022), Soltau, Germany<br />
 <br />
 
 <i>From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete</i></br />
