--- a/myTalks.html
+++ b/myTalks.html
@@ -75,6 +75,8 @@
     <li><a href="https://confengine.com/conferences/selenium-conf-2022/proposal/16612/patterns-to-whole-team-test-automation-transformation">Selenium Conference India / Virtual</a>, July 29-30th, Online.
         <br>TALK: Patterns to Whole Team Test Automation Transformation
         <br>WORKSHOP: Ensemble Testing on Selenium 4, co-presented with Manoj Kumar</li>
+    <li>Testμ Conference, August 23rd, 2022, Online.
+      <br>KEYNOTE: TBD</li>
     <li><a href="https://www.socrates-conference.de/home">Socrates 2022</a>, August 25-28th, Soltau, Germany
         <br>SESSION: Ensemble Testing</li>
     <li><a href="https://testingassembly.fistb.fi/seminar-2/">Testing Assembly</a>, Sept 21st and 22nd, Helsinki, Finland.
