--- a/myTalks.html
+++ b/myTalks.html
@@ -79,6 +79,9 @@
       <br>KEYNOTE: TBD</li>
     <li><a href="https://www.socrates-conference.de/home">Socrates 2022</a>, August 25-28th, Soltau, Germany
         <br>SESSION: Ensemble Testing</li>
+    <li>Game of Testing -conference, Sept 1st or 2nd, 2022, Online (and Bangalore, India)
+      <br>WORKSHOP: Exploratory Testing with a Constraint - Test Automation</li>
+    </li>
     <li><a href="https://testingassembly.fistb.fi/seminar-2/">Testing Assembly</a>, Sept 21st and 22nd, Helsinki, Finland.
       <br>KEYNOTE: From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete
       <br>TUTORIAL: Social Software Testing Approaches</li>
@@ -303,6 +306,7 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 <br />
 
 <i>Exploratory Testing with a Constraint: Test Automation</i><br />
+&nbsp; Facilitator at Game of Testing -conference (1.9.2022), Online<br />
 &nbsp; Trainer at a customer organization  (10.6.2021), Online<br />
 &nbsp; Trainer at Exploratory Testing Academy  (27.4.2021), Online<br />
 <br />
