--- a/myArticles.html
+++ b/myArticles.html
@@ -162,7 +162,8 @@
 <ul>
   <li>2020, 2022 Program Committee Member, Selenium Conference India</li>
   <li>2021, 2022 Program Committee Member, SEETest</li>
-  <li>2015-2020 Main Organizer, European Testing Conference  (Bucharest/Romania, Helsinki/Finland, Amsterdam/Netherlands, Valencia/Spain, Amsterdam/Netherlands</li>
+  <li>2022 Program Committee Member, Geekle QA Conference</li>
+  <li>2015-2020 Main Organizer/Conference Designer European Testing Conference  (Bucharest/Romania, Helsinki/Finland, Amsterdam/Netherlands, Valencia/Spain, Amsterdam/Netherlands</li>
   <li>2013-2014 Main Organizer, Tampere Goes Agile (Tampere/Finland)</li>
   <li>2013 Program Committee Member, EuroSTAR</li>
 </ul>
