--- a/myTalks.html
+++ b/myTalks.html
@@ -62,8 +62,6 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li><a href="https://www.meetup.com/test-automation-talks/events/285938225/">Test Automation Talks</a>, July 5th, 2022, Online.
-        <br>TALK: Contemporary Exploratory Testing</li>
     <li><a href="https://conference.unicomseminars.org/agile-devops-software-testing-conference/apac-july/">UNICOM Agile,DevOps,Testing</a>, July 21-22th, Online.
        <br>TALK: How to Get Better at Exploratory Testing </li>
     <li><a href="https://confengine.com/conferences/selenium-conf-2022/proposal/16612/patterns-to-whole-team-test-automation-transformation">Selenium Conference India / Virtual</a>, July 29-30th, Online.
@@ -73,8 +71,8 @@
       <br>KEYNOTE: TBD</li>
     <li><a href="https://www.socrates-conference.de/home">Socrates 2022</a>, August 25-28th, Soltau, Germany
         <br>SESSION: Ensemble Testing</li>
-    <li>Game of Testing -conference, Sept 1st or 2nd, 2022, Online (and Bangalore, India)
-      <br>WORKSHOP: Exploratory Testing with a Constraint - Test Automation</li>
+    <li>Game of Testing -conference Pre-Conference, Sept 4th, 2022, Online
+      <br>WORKSHOP: Hands-Off Exploratory Testing - How to Manage Test At Scale </li>
     </li>
     <li><a href="https://testingassembly.fistb.fi/seminar-2/">Testing Assembly</a>, Sept 21st and 22nd, Helsinki, Finland.
       <br>KEYNOTE: From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete
@@ -215,6 +213,7 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 <br />
 
 <i>Hands-off Exploratory Testing - How to Manage Test at Scale</i> <a href="https://www.youtube.com/watch?v=uAPwRaKIa9E">[video]</a><br />
+&nbsp; Facilitator at Game of Testing -unconference (4.9.2022), Online<br />
 &nbsp; Keynote Speaker at HUSTEF Conference (18-21.10.2021), Online<br />
 &nbsp; Keynote Speaker at QA Talks (4.6.2021), Online<br />
 <br />
@@ -254,7 +253,6 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 <i>How to Get Better at Exploratory Testing</i><br />
 &nbsp; Speaker at a MoT Sarajevo Meetup (27.10.2021), Online<br />
 <br />
-
 
 <i>Creating Career Opportunities in Quality Engineering</i><br />
 &nbsp; Panelist at mabl Experience (28.10.2021), Online. <br />
@@ -298,7 +296,6 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 <br />
 
 <i>Exploratory Testing with a Constraint: Test Automation</i><br />
-&nbsp; Facilitator at Game of Testing -conference (1.9.2022), Online<br />
 &nbsp; Trainer at a customer organization  (10.6.2021), Online<br />
 &nbsp; Trainer at Exploratory Testing Academy  (27.4.2021), Online<br />
 <br />
