--- a/myTalks.html
+++ b/myTalks.html
@@ -251,6 +251,7 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 <br />
 
 <i>How to Get Better at Exploratory Testing</i><br />
+&nbsp; Speaker at UNICOM Agile,DevOps,Testing (21-22.7.2022), Online.
 &nbsp; Speaker at a MoT Sarajevo Meetup (27.10.2021), Online<br />
 <br />
 
