--- a/myTalks.html
+++ b/myTalks.html
@@ -68,7 +68,7 @@
         <br>TALK: Patterns to Whole Team Test Automation Transformation
         <br>WORKSHOP: Ensemble Testing on Selenium 4, co-presented with Manoj Kumar</li>
     <li>Testμ Conference, August 23rd, 2022, Online.
-      <br>KEYNOTE: TBD</li>
+      <br>KEYNOTE: Let's Do a Thing and Call it Foo</li>
     <li><a href="https://www.socrates-conference.de/home">Socrates 2022</a>, August 25-28th, Soltau, Germany
         <br>SESSION: Ensemble Testing</li>
     <li>Game of Testing -conference Pre-Conference, Sept 4th, 2022, Online
@@ -103,6 +103,11 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 <i>Targeting Errors of Omission</i><br />
 &nbsp; Keynote Speaker at Global Testing Retreat, December 9-11th 2022, Online<br />
 <br />
+
+<i>Let's Do a Thing and Call it Foo</i><br />
+&nbsp; Keynote Speaker at Testμ Conference, (23.8.2022), Online<br />
+<br />
+
 
 <i>A Practitioner's Guide to Contemporary Exploratory Testing</i><br />
 &nbsp; Keynote Speaker at Axiom Summit Conference, 14.5.2022, Online<br />
