--- a/myTalks.html
+++ b/myTalks.html
@@ -104,10 +104,9 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 &nbsp; Keynote Speaker at Global Testing Retreat, December 9-11th 2022, Online<br />
 <br />
 
-<i>Let's Do a Thing and Call it Foo</i><br />
+<i>Let's Do a Thing and Call It Foo</i><br />
 &nbsp; Keynote Speaker at Testμ Conference, (23.8.2022), Online<br />
 <br />
-
 
 <i>A Practitioner's Guide to Contemporary Exploratory Testing</i><br />
 &nbsp; Keynote Speaker at Axiom Summit Conference, 14.5.2022, Online<br />
