add link to lambdatest conf

--- a/myTalks.html
+++ b/myTalks.html
@@ -67,7 +67,7 @@
     <li><a href="https://confengine.com/conferences/selenium-conf-2022/proposal/16612/patterns-to-whole-team-test-automation-transformation">Selenium Conference India / Virtual</a>, July 29-30th, Online.
         <br>TALK: Patterns to Whole Team Test Automation Transformation
         <br>WORKSHOP: Ensemble Testing on Selenium 4, co-presented with Manoj Kumar</li>
-    <li>Testμ Conference, August 23rd, 2022, Online.
+    <li><a href="https://www.lambdatest.com/testuconf-2022">Testμ Conference</a>, August 23rd, 2022, Online.
       <br>KEYNOTE: Let's Do a Thing and Call it Foo</li>
     <li><a href="https://www.socrates-conference.de/home">Socrates 2022</a>, August 25-28th, Soltau, Germany
         <br>SESSION: Ensemble Testing</li>
