--- a/myTalks.html
+++ b/myTalks.html
@@ -62,7 +62,7 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li><a href="https://conference.unicomseminars.org/agile-devops-software-testing-conference/apac-july/">UNICOM Agile,DevOps,Testing</a>, July 21-22th, Online.
+    <li><a href="https://conference.unicomseminars.org/agile-devops-software-testing-conference/apac-july/">UNICOM Agile,DevOps,Testing</a>, July 20-21th, Online.
        <br>TALK: How to Get Better at Exploratory Testing </li>
     <li><a href="https://confengine.com/conferences/selenium-conf-2022/proposal/16612/patterns-to-whole-team-test-automation-transformation">Selenium Conference India / Virtual</a>, July 29-30th, Online.
         <br>TALK: Patterns to Whole Team Test Automation Transformation
@@ -255,7 +255,7 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 <br />
 
 <i>How to Get Better at Exploratory Testing</i><br />
-&nbsp; Speaker at UNICOM Agile,DevOps,Testing (21-22.7.2022), Online.<br />
+&nbsp; Speaker at UNICOM Agile,DevOps,Testing (20.7.2022), Online.<br />
 &nbsp; Speaker at a MoT Sarajevo Meetup (27.10.2021), Online<br />
 <br />
 
@@ -281,6 +281,10 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 
 <i>Exploring the Exploratory with Maaret Pyhäjärvi</i><br />
 &nbsp; Speaker at Ministry of Testing Bangalore (7.5.2021), Online<br />
+<br />
+
+<i>Fireside Chat on Scaling Your QA Ops</i><br />
+&nbsp; Speaker at BrowserStack event (19.7.2022), Online<br />
 <br />
 
 <i>Fireside Chat with Maaret Pyhäjärvi</i><br />
