add twitter summary card

--- a/silverjubilee/index.html
+++ b/silverjubilee/index.html
@@ -14,6 +14,13 @@
     <meta property="og:type" content="website">
     <meta name="twitter:creator" content="@maaretp">
     <meta name="author" content="Maaret Pyhäjärvi">
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@maaretp" />
+    <meta name="twitter:title" content="maaretp silver jubilee" />
+    <meta name="twitter:description" content="The maaretp silver jubilee is a week of events to celebrate her 25 year career anniversary bringing together some of her influencers, her own contents and the community." />
+    <meta name="twitter:image" content="silver-jubilee-square2.png" />
+
 </head>
 <body>
 
