--- a/silverjubilee/index.html
+++ b/silverjubilee/index.html
@@ -19,7 +19,7 @@
     <meta name="twitter:site" content="@maaretp" />
     <meta name="twitter:title" content="maaretp silver jubilee" />
     <meta name="twitter:description" content="The maaretp silver jubilee is a week of events to celebrate her 25 year career anniversary bringing together some of her influencers, her own contents and the community." />
-    <meta name="twitter:image" content="silver-jubilee-square2.png" />
+    <meta name="twitter:image" content="https://maaretp.com/silverjubilee/silver-jubilee-square2.png" />
 
 </head>
 <body>
