Adding an info page

--- a/silverjubilee/speakers.html
+++ b/silverjubilee/speakers.html
@@ -25,10 +25,11 @@
 <h3 class="tagline">October 24&ndash;27th &mdash; Online</h3>
 <nav class="nav primary-nav">
 <ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="speakers.html">Speakers</a></li>
-<li><a href="schedule.html">Schedule</a></li>
-<li><a href="register.html">Register</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="announcement.html">Info</a></li>
+    <li><a href="schedule.html">Schedule</a></li>
+    <li><a href="speakers.html">Speakers</a></li>
+    <li><a href="register.html">Register</a></li>
 </ul>
 </nav>
 </header>
@@ -36,7 +37,7 @@
 <section class="row-alt">
 <div class="lead container">
 <h1>Speakers</h1>
-<p>An inspiration extravaganza.</p>
+<p>An inspiration extravaganza on career and professionalism in software industry.</p>
 </div>
 </section>
 
