--- a/silverjubilee/register.html
+++ b/silverjubilee/register.html
@@ -25,10 +25,11 @@
 <h3 class="tagline">October 24&ndash;27th &mdash; Online</h3>
 <nav class="nav primary-nav">
 <ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="speakers.html">Speakers</a></li>
-<li><a href="schedule.html">Schedule</a></li>
-<li><a href="register.html">Register</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="announcement.html">Info</a></li>
+    <li><a href="schedule.html">Schedule</a></li>
+    <li><a href="speakers.html">Speakers</a></li>
+    <li><a href="register.html">Register</a></li>
 </ul>
 </nav>
 </header>
