--- a/myTalks.html
+++ b/myTalks.html
@@ -62,11 +62,6 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li><a href="https://conference.unicomseminars.org/agile-devops-software-testing-conference/apac-july/">UNICOM Agile,DevOps,Testing</a>, July 20-21th, Online.
-       <br>TALK: How to Get Better at Exploratory Testing </li>
-    <li><a href="https://confengine.com/conferences/selenium-conf-2022/proposal/16612/patterns-to-whole-team-test-automation-transformation">Selenium Conference India / Virtual</a>, July 29-30th, Online.
-        <br>TALK: Patterns to Whole Team Test Automation Transformation
-        <br>WORKSHOP: Ensemble Testing on Selenium 4, co-presented with Manoj Kumar</li>
     <li><a href="https://www.lambdatest.com/testuconf-2022">Testμ Conference</a>, August 23rd, 2022, Online.
       <br>KEYNOTE: Let's Do a Thing and Call it Foo</li>
     <li>Game of Testing -conference Pre-Conference, Sept 4th, 2022, Online
@@ -83,8 +78,7 @@
   </ul>
 
 </p>I'm taking a break from traveling to conferences after I reached 400 sessions Dec 13th 2019,
-happy to appear in podcasts, webinars, remote conferences and anything that requires no travel.
-I make exceptions when I can travel with family since Feb 2022. <p>
+happy to appear in podcasts, webinars, remote conferences and anything that requires no travel.<p>
 
 <img src="img/Talks2021.png" alt="statistics of talks from Maaret" width="300">
   <H2>UPCOMING PUBLIC TRAININGS</H2>
@@ -163,7 +157,8 @@ I make exceptions when I can travel with family since Feb 2022. <p>
 &nbsp; Speaker at Customer event, 14.6.2022, Helsinki, Finland<br />
 <br />
 
-<i>Patterns to Whole Team Test Automation Transformation</i><br />
+<i>Patterns to Whole Team Test Automation Transformation</i>
+<a href="https://dev.to/maaretp/patterns-to-whole-team-test-automation-transformation-nmn">[Talk Turned Article]</a><br />
 &nbsp; Speaker at Selenium Conference India / Virtual, 29-30.7.2022, Online<br />
 <br />
 
