--- a/myTalks.html
+++ b/myTalks.html
@@ -62,6 +62,8 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
+    <li><a href="https://www.youtube.com/watch?v=WDSL06hN2Rw">What Lies Beneath...</a>, August 19th, 2022, Online.
+      <br>Ask Me Anything Featuring Maaret Pyhäjärvi</li>
     <li><a href="https://www.lambdatest.com/testuconf-2022">Testμ Conference</a>, August 23rd, 2022, Online.
       <br>KEYNOTE: Let's Do a Thing and Call it Foo</li>
     <li>Game of Testing -conference Pre-Conference, Sept 4th, 2022, Online
@@ -174,6 +176,9 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 <i>Something in the Way We Test</i><br />
 &nbsp; Speaker at TQSA (9.3.2022), Online<br />
 <br />
+
+<i>What Lies Beneath... Ask Me Anything ft. Maaret Pyhäjärvi</i><br />
+&nbsp; Speaker at Webinar (19.8.2022), Online<br />
 
 <i>Social Software Testing Approaches, 1 day tutorial</i> <br />
 &nbsp; Trainer at Conference, Sept 22nd, Helsinki, Finland.<br />
