--- a/myTalks.html
+++ b/myTalks.html
@@ -75,6 +75,7 @@
     <li><a href="https://sanae.beer">SANAE Software Testing BEER.EX</a>, Sept 28-29th, 2022, Bratislava, Slovakia.
       <br>KEYNOTE: Automationist's Gambit
       <br>TUTORIAL: Exploring Programmatic Interfaces </li>
+    <li>Proven Webinaari (in Finnish), Nov 16th, 2022, Online</li>
     <li>Global Testing Retreat 2022, December 9-11th 2022, Online.
       <br>KEYNOTE: Targeting Errors of Omission </li>
   </ul>
@@ -85,8 +86,12 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 <img src="img/Talks2021.png" alt="statistics of talks from Maaret" width="300">
   <H2>UPCOMING PUBLIC TRAININGS</H2>
   <ul style="text-align: left;">
-  <li> <a href="https://koulutus.almatalent.fi/tutkivan-testauksen-tyokurssi//">Tutkivan testauksen työkurssi</a>,
-  Alma Talent, 8-9.2.2023
+  <li> <a href="https://koulutus.almatalent.fi/tutkivan-testauksen-tyokurssi/">Tutkivan testauksen työkurssi</a>,
+      Alma Talent, 12-13.9.2022, Online. 
+        </ul>
+    https://koulutus.almatalent.fi/tutkivan-testauksen-tyokurssi/
+  <li> <a href="https://koulutus.almatalent.fi/tutkivan-testauksen-tyokurssi/">Tutkivan testauksen työkurssi</a>,
+  Alma Talent, 8-9.2.2023, Helsinki, Finland. 
     </ul>
 <p><p>
 
