--- a/myTalks.html
+++ b/myTalks.html
@@ -62,6 +62,8 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
+    <li><a href="https://www.meetup.com/supermetrics-dev-meetups/events/287490851/">Supermetrics Dev Meetup</a>, August 17th, 2022, Helsinki, Finland.
+      TALK: Let's Do a Thing and Call it Foo</li>
     <li><a href="https://www.youtube.com/watch?v=WDSL06hN2Rw">What Lies Beneath...</a>, August 19th, 2022, Online.
       <br>Ask Me Anything Featuring Maaret Pyhäjärvi</li>
     <li><a href="https://www.lambdatest.com/testuconf-2022">Testμ Conference</a>, August 23rd, 2022, Online.
@@ -104,7 +106,8 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 <br />
 
 <i>Let's Do a Thing and Call It Foo</i><br />
-&nbsp; Keynote Speaker at Testμ Conference, (23.8.2022), Online<br />
+&nbsp; Speaker at Supermetrics Tech Meetup, 17.8.2022, Helsinki, Finland<br />
+&nbsp; Keynote Speaker at Testμ Conference, 23.8.2022, Online<br />
 <br />
 
 <i>A Practitioner's Guide to Contemporary Exploratory Testing</i><br />
