--- a/myTalks.html
+++ b/myTalks.html
@@ -62,15 +62,6 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li><a href="https://www.meetup.com/supermetrics-dev-meetups/events/287490851/">Supermetrics Dev Meetup</a>, August 17th, 2022, Helsinki, Finland.
-      TALK: Let's Do a Thing and Call it Foo</li>
-    <li><a href="https://www.youtube.com/watch?v=WDSL06hN2Rw">What Lies Beneath...</a>, August 19th, 2022, Online.
-      <br>Ask Me Anything Featuring Maaret Pyhäjärvi</li>
-    <li><a href="https://www.lambdatest.com/testuconf-2022">Testμ Conference</a>, August 23rd, 2022, Online.
-      <br>KEYNOTE: Let's Do a Thing and Call it Foo</li>
-    <li>Game of Testing -conference Pre-Conference, Sept 4th, 2022, Online
-      <br>WORKSHOP: Hands-Off Exploratory Testing - How to Manage Test At Scale </li>
-    </li>
     <li><a href="https://testingassembly.fistb.fi/seminar-2/">Testing Assembly</a>, Sept 21st and 22nd, Helsinki, Finland.
       <br>KEYNOTE: From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete
       <br>TUTORIAL: Social Software Testing Approaches</li>
@@ -105,8 +96,8 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 &nbsp; Keynote Speaker at Global Testing Retreat, December 9-11th 2022, Online<br />
 <br />
 
-<i>Let's Do a Thing and Call It Foo</i><br />
-&nbsp; Speaker at Supermetrics Tech Meetup, 17.8.2022, Helsinki, Finland<br />
+<i>Let's Do a Thing and Call It Foo</i> <a href="https://www.lambdatest.com/blog/lets-do-it-a-thing-and-call-it-foo/">[Article/Video]</a><br />
+&nbsp; Speaker at Supermetrics Tech Meetup, 17.8.2022, Helsinki, Finland <a href="https://www.youtube.com/watch?v=lkJ6bixMrg8&t=2985s">[video]</a><br />
 &nbsp; Keynote Speaker at Testμ Conference, 23.8.2022, Online<br />
 <br />
 
@@ -185,7 +176,7 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 &nbsp; Speaker at TQSA (9.3.2022), Online<br />
 <br />
 
-<i>What Lies Beneath... Ask Me Anything ft. Maaret Pyhäjärvi</i><br />
+<i>What Lies Beneath... Ask Me Anything ft. Maaret Pyhäjärvi</i> <a href="https://www.youtube.com/watch?v=WDSL06hN2Rw">[video]</a> <br />
 &nbsp; Speaker at Webinar (19.8.2022), Online<br />
 
 <i>Social Software Testing Approaches, 1 day tutorial</i> <br />
