--- a/myTalks.html
+++ b/myTalks.html
@@ -68,6 +68,8 @@
     <li><a href="https://sanae.beer">SANAE Software Testing BEER.EX</a>, Sept 28-29th, 2022, Bratislava, Slovakia.
       <br>KEYNOTE: Automationist's Gambit
       <br>TUTORIAL: Exploring Programmatic Interfaces </li>
+    <li>Customer Event, Dec 8th, 2022
+      <br>TALK: Breaking Illusions with Testing</li>
     <li>Proven Webinaari (in Finnish), Nov 16th, 2022, Online</li>
     <li>Global Testing Retreat 2022, December 9-11th 2022, Online.
       <br>KEYNOTE: Targeting Errors of Omission </li>
@@ -115,6 +117,7 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 <br />
 
 <i>Breaking Illusions with Testing</i><br />
+&nbsp; Speaker at Customer Event (8.12.2022), Helsinki, Finland</a><br />
 &nbsp; Speaker at TECH(K)NOW Day (8.3.2022), Online <a href="https://www.youtube.com/watch?v=oQXbs3awemg">[video]</a><br />
 &nbsp; Keynote Speaker at German Testing Day (3-4.5.2021), Online<br />
 &nbsp; Keynote Speaker at SLASSCOM Quality and Business Excellence Summit (10.3.2021), Online<br />
