--- a/myArticles.html
+++ b/myArticles.html
@@ -49,6 +49,7 @@
   <h2>PODCAST APPEARANCES</h2>
 
   <ul>
+    <li>Quality Sense Podcast, <a href="https://abstracta.us/blog/podcast/maaret-pyhajarvi-exploratory-testing/">Exploratory Testing</a>, September 30th, 2022</li>
     <li>Koodarikuiskaaja, <a href="https://koodarikuiskaaja.fi/podcast/yhteisoohjelmoinnissa-tehdaan-yllattavia-asioita/">Yhteisohjelmoinnissa tehdään yllättäviä asioita</a>, August 28th, 2022</li>
     <li>The Mob Mentality Show, <a href="https://www.youtube.com/watch?v=AjJF-0r5HMc">Ensemble Teaching, Exploratory Testing, and Product Development with Maaret Pyhäjärvi, May 2022</a></li>
     <li>The Testing Show, <a href="https://qualitestgroup.com/insights/podcasts/the-testing-show-women-in-testing-part-1/">Women in Testing Part 1</a> and <a href="https://qualitestgroup.com/insights/podcasts/the-testing-show-women-in-testing-part-2/">Part 2</a>, March 2022.</li>
