--- a/myTalks.html
+++ b/myTalks.html
@@ -62,15 +62,9 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li><a href="https://testingassembly.fistb.fi/seminar-2/">Testing Assembly</a>, Sept 21st and 22nd, Helsinki, Finland.
-      <br>KEYNOTE: From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete
-      <br>TUTORIAL: Social Software Testing Approaches</li>
-    <li><a href="https://sanae.beer">SANAE Software Testing BEER.EX</a>, Sept 28-29th, 2022, Bratislava, Slovakia.
-      <br>KEYNOTE: Automationist's Gambit
-      <br>TUTORIAL: Exploring Programmatic Interfaces </li>
-    <li>Customer Event, Dec 8th, 2022
-      <br>TALK: Breaking Illusions with Testing</li>
     <li>Proven Webinaari (in Finnish), Nov 16th, 2022, Online</li>
+    <li>Customer Event, Dec 8th, 2022
+      <br>TALK: Let's Do a Thing and Call It Foo</li>
     <li>Global Testing Retreat 2022, December 9-11th 2022, Online.
       <br>KEYNOTE: Targeting Errors of Omission </li>
   </ul>
@@ -99,6 +93,7 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 <br />
 
 <i>Let's Do a Thing and Call It Foo</i> <a href="https://www.lambdatest.com/blog/lets-do-it-a-thing-and-call-it-foo/">[Article/Video]</a><br />
+&nbsp; Speaker at Customer Event (8.12.2022), Helsinki, Finland</a><br />
 &nbsp; Speaker at Supermetrics Tech Meetup, 17.8.2022, Helsinki, Finland <a href="https://www.youtube.com/watch?v=lkJ6bixMrg8&t=2985s">[video]</a><br />
 &nbsp; Keynote Speaker at Testμ Conference, 23.8.2022, Online<br />
 <br />
@@ -117,7 +112,6 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 <br />
 
 <i>Breaking Illusions with Testing</i><br />
-&nbsp; Speaker at Customer Event (8.12.2022), Helsinki, Finland</a><br />
 &nbsp; Speaker at TECH(K)NOW Day (8.3.2022), Online <a href="https://www.youtube.com/watch?v=oQXbs3awemg">[video]</a><br />
 &nbsp; Keynote Speaker at German Testing Day (3-4.5.2021), Online<br />
 &nbsp; Keynote Speaker at SLASSCOM Quality and Business Excellence Summit (10.3.2021), Online<br />
