Update Online Talks to silver jubilee

--- a/silverjubilee/speakers.html
+++ b/silverjubilee/speakers.html
@@ -44,11 +44,34 @@
 <section class="row">
 <div class="grid">
 
+<section class="speaker" id="jukka-talvio">
+<div class="col-2-3">
+<h2>Jukka Talvio</h2>
+<h5>Career Lessons with a Significant Influencer</h5>
+<p>Good managers set people with potential on good paths. In this talk, we hear from one good manager on 
+    testing adjacent careers, where his has taken him and what takeaways he could share to the audience. 
+    </p>
+<h5>About Jukka</h5>
+<p>Jukka Talvio works at Nokia HERE in Germany, and was a significant influence on Maaret's career nurturing 
+    and framing potential 20 years ago at F-Secure as her manager. With years apart working in different companies, 
+    there is no greater honor for celebration of a Silver Jubilee than having Jukka share his accumulated wisdom.<
+</p>
+</div><aside class="col-1-3">
+<div class="speaker-info">
+<img src="jukka-talvio-square.jpg" alt="Jukka Talvio">
+<ul>
+<li><a href="https://twitter.com/jukka_talvio">@jukka_talvio</a></li>
+</ul>
+</div>
+</aside>
+</section>
+
+
 <section class="speaker" id="maaret-pyhajarvi">
 <div class="col-2-3">
 <h2>Maaret Pyhäjärvi</h2>
 <h5>Pivotal Moments, Pivotal Lessons</h5>
-<p>Description to be added...</p>
+<p>Recounting 25 years, with a common theme (testing in different context) but a lot of different companies, focus points and lessons. In this talk, Maaret looks at themes she has worked on over the years, and what we could learn from her variety of experiences.</p>
 <h5>About Maaret</h5>
 <p>Maaret Pyhäjärvi is an exploratory tester extraordinaire with a day-job at Vaisala as Principal Test Engineer. She is a tester, (polyglot) programmer, speaker, author, and a community facilitator. She has been awarded the two prestigious global testing awards, Most Influential Agile Testing Professional Person 2016 (MIATPP) and EuroSTAR Testing Excellence Award (2020), Tester Worth Appreciating (2022), and selected as Top-100 Most Influential in ICT in Finland 2019-2021. </p>
 </div><aside class="col-1-3">
@@ -62,8 +85,6 @@
 </div>
 </aside>
 </section>
-
-
 
 <footer class="primary-footer container group">
     <small>&copy; the maaretp silver jubilee 2022</small>
