Update vision descr

--- a/silverjubilee/schedule.html
+++ b/silverjubilee/schedule.html
@@ -37,7 +37,7 @@
 <section class="row-alt">
 <div class="lead container">
 <h1>Schedule</h1>
-<p>Event week has a conference day with invited speakers and workshop days of Maaret's teaching for community.</p>
+<p>Event week has a online talks and workshop sessions of Maaret's teaching for community.</p>
 </div>
 </section>
 
