--- a/silverjubilee/schedule.html
+++ b/silverjubilee/schedule.html
@@ -48,7 +48,7 @@
 <thead>
 <tr>
 <th scope="row">
-Workshops</th>
+Workshop</th>
 <td class="schedule-offset" colspan="2">
 October 24th
 </td>
@@ -70,7 +70,15 @@ Sprint-based Test Planning Workshop
 </th>
 </a>
 </td>
+</tr>
+</tbody>
+</table>
 
+<table>
+<thead>
+<tr>
+<th scope="row">
+Workshop</th>
 <td class="schedule-offset" colspan="2">
 October 25th
 </td>
@@ -92,8 +100,15 @@ Test Automationist's Gambit Workshop (pytest/playwright)
 </th>
 </a>
 </td>
+</tr>
+</tbody>
+</table>
 
-
+<table>
+<thead>
+<tr>
+<th scope="row">
+Workshop</th>
 <td class="schedule-offset" colspan="2">
 October 26th
 </td>
@@ -115,8 +130,15 @@ Exploratory Unit Testing Workshop (pytest)
 </th>
 </a>
 </td>
+</tr>
+</tbody>
+</table>
 
-
+<table>
+<thead>
+<tr>
+<th scope="row">
+Workshop</th>
 <td class="schedule-offset" colspan="2">
 October 26th
 </td>
@@ -138,8 +160,6 @@ Test Coverage Workshop
 </th>
 </a>
 </td>
-
-
 </tr>
 </tbody>
 </table>
