--- a/silverjubilee/register.html
+++ b/silverjubilee/register.html
@@ -37,7 +37,7 @@
 <section class="row-alt">
 <div class="lead container">
 <h1>Register</h1>
-<p>A one-time event to celebrate a 25-year career.</p>
+<p>A one-time week of events to celebrate a 25-year career.</p>
 </div>
 </section>
 
@@ -58,7 +58,8 @@
 
 
 
-<button type="button" class="btn btn-default" onClick="parent.location='https://ti.to/exploratory-testing-academy/silver-jubilee-online-talks-thursday' disabled">Online Talks Thursday</button>
+<button type="button" class="btn btn-default" onClick="window.location.href='https://ti.to/exploratory-testing-academy/silver-jubilee-online-talks-thursday';">Online Talks Thursday</button>
+
 
 <footer class="primary-footer container group">
     <small>&copy; the maaretp silver jubilee 2022</small>
