--- a/silverjubilee/speakers.html
+++ b/silverjubilee/speakers.html
@@ -58,7 +58,7 @@
 </p>
 </div><aside class="col-1-3">
 <div class="speaker-info">
-<img src="jukka-talvio-square.jpg" alt="Jukka Talvio">
+<img src="jukka-talvio-square.jpeg" alt="Jukka Talvio">
 <ul>
 <li><a href="https://twitter.com/jukka_talvio">@jukka_talvio</a></li>
 </ul>
