--- a/silverjubilee/register.html
+++ b/silverjubilee/register.html
@@ -58,7 +58,7 @@
 
 
 
-<button type="button" class="btn btn-default" onClick="window.location.href='https://ti.to/exploratory-testing-academy/silver-jubilee-online-talks-thursday';">Online Talks Thursday</button>
+<button type="button" class="btn btn-default" onClick="window.location.href='https://ti.to/exploratory-testing-academy';">Register for Silver Jubilee Events</button>
 
 
 <footer class="primary-footer container group">
