--- a/silverjubilee/index.html
+++ b/silverjubilee/index.html
@@ -60,9 +60,9 @@
 <h5>Speakers</h5>
 <a href="speakers.html">
 <img src="speakers-square.png" alt="Professional Speakers">
-<h3>Practioners as Speakers</h3>
+<h3>Me and My Influencers</h3>
 </a>
-<p> Speakers hand-picked for influence on Maaret's career invited to share on various topics of interest.</p>
+<p>Some workshops by Maaret, and some talks by people who have mattered.</p>
 </section><section class="teaser col-1-3">
 <h5>Schedule</h5>
 <a href="schedule.html">
