--- a/silverjubilee/announcement.html
+++ b/silverjubilee/announcement.html
@@ -15,7 +15,7 @@
     <meta name="twitter:creator" content="@maaretp">
     <meta name="author" content="Maaret Pyhäjärvi">
 </head>
-<body>
+<>
 
 
 <header class="primary-header container group">
@@ -45,6 +45,18 @@
 <div class="grid">
 
 <section class="col-2-3">
+<h2>It's time</h2>
+<h5>October 6thth, 2022</h5>
+<p> Well planned is not done at all. Doing is what creates the impact. 
+    And now, the event is live, and who ever come are the right people. </p>
+</section>
+</div>
+</section>
+
+<section class="row">
+<div class="grid">
+
+<section class="col-2-3">
 <h2>What's This About?</h2>
 <h5>July 19th, 2022</h5>
 <p> Maaret Pyhäjärvi is an exploratory tester extraordinaire and a polyglot programmer from Finland. 
@@ -55,13 +67,13 @@
     Anyone is welcome to attend the online events. They are twofold:
 
     <ul class="why-attend">
-        <li>A Conference Day of Talks - Maaret hosts speakers on career and professionalism</li>
+        <li>Online Talks - two talks on career and professionalism</li>
         <li>Workshops - Maaret teaches online workshops</li>
     </ul>
+</section>
+</div>
+</section>
 
-<!--
-<button type="button" class="btn btn-default" onClick="parent.location='index.html' disabled">Get Your Pass</button>
--->
 
 <footer class="primary-footer container group">
     <small>&copy; the maaretp silver jubilee 2022</small>
