--- a/silverjubilee/speakers.html
+++ b/silverjubilee/speakers.html
@@ -67,21 +67,13 @@
 </section>
 
 
-<section class="speaker" id="maaret-pyhajarvi">
+< class="speaker" id="maaret-pyhajarvi">
 <div class="col-2-3">
 <h2>Maaret Pyhäjärvi</h2>
 <h5>Pivotal Moments, Pivotal Lessons</h5>
 <p>Recounting 25 years, with a common theme (testing in different context) but a lot of different companies, focus points and lessons. In this talk, Maaret looks at themes she has worked on over the years, and what we could learn from her variety of experiences.</p>
 <h5>About Maaret</h5>
 <p>Maaret Pyhäjärvi is an exploratory tester extraordinaire with a day-job at Vaisala as Principal Test Engineer. She is a tester, (polyglot) programmer, speaker, author, and a community facilitator. She has been awarded the two prestigious global testing awards, Most Influential Agile Testing Professional Person 2016 (MIATPP) and EuroSTAR Testing Excellence Award (2020), Tester Worth Appreciating (2022), and selected as Top-100 Most Influential in ICT in Finland 2019-2021. </p>
-</div><aside class="col-1-3">
-<div class="speaker-info">
-<img src="maaret-pyhajarvi-square.png" alt="Maaret Pyhäjärvi">
-<ul>
-<li><a href="https://twitter.com/maaretp">@maaretp</a></li>
-<li><a href="https://visible-quality.blogspot.fi">visible-quality.blogspot.fi</a></li>
-<li><a href="https://maaretp.com">maaretp.com</a></li>
-</ul>
 <h2>Sprint Test Planning Workshop</h2>
 <p>This 90 minute exercise teaches about the change in test planning when we stop thinking in terms of releases in the end and start thinking in shorter increments. I have run this exercise as part of my agile testing course over the years.</p>
 <h2>Automationist's Gambit Workshop</h2>
@@ -91,7 +83,17 @@
 <h2>Test Coverage Workshop</h2>
 <p>This 90 minute workshop teaches about test coverage - requirements, code, and risks. We'll work on a small code level exercise and again, you don't have to know code to enjoy the experience. We may do this in java, or in python but that does not really matter.</p>
 </div>
+
+<aside class="col-1-3">
+<div class="speaker-info">
+<img src="maaret-pyhajarvi-square.png" alt="Maaret Pyhäjärvi">
+<ul>
+<li><a href="https://twitter.com/maaretp">@maaretp</a></li>
+<li><a href="https://visible-quality.blogspot.fi">visible-quality.blogspot.fi</a></li>
+<li><a href="https://maaretp.com">maaretp.com</a></li>
+</ul>
 </aside>
+
 </section>
 
 <footer class="primary-footer container group">
