--- a/silverjubilee/speakers.html
+++ b/silverjubilee/speakers.html
@@ -54,7 +54,7 @@
 <h5>About Jukka</h5>
 <p>Jukka Talvio works at Nokia HERE in Germany, and was a significant influence on Maaret's career nurturing 
     and framing potential 20 years ago at F-Secure as her manager. With years apart working in different companies, 
-    there is no greater honor for celebration of a Silver Jubilee than having Jukka share his accumulated wisdom.<
+    there is no greater honor for celebration of a Silver Jubilee than having Jukka share his accumulated wisdom.
 </p>
 </div><aside class="col-1-3">
 <div class="speaker-info">
