--- a/silverjubilee/speakers.html
+++ b/silverjubilee/speakers.html
@@ -54,7 +54,7 @@
 <h5>About Jukka</h5>
 <p>Jukka Talvio works at Nokia HERE in Germany, and was a significant influence on Maaret's career nurturing 
     and framing potential 20 years ago at F-Secure as her manager. With years apart working in different companies, 
-    there is no greater honor for celebration of a Silver Jubilee than having Jukka share his accumulated wisdom.
+    there is no greater honor for celebration of a Silver Jubilee than having Jukka share his accumulated wisdom.<
 </p>
 </div><aside class="col-1-3">
 <div class="speaker-info">
@@ -67,7 +67,7 @@
 </section>
 
 
-< class="speaker" id="maaret-pyhajarvi">
+<section class="speaker" id="maaret-pyhajarvi">
 <div class="col-2-3">
 <h2>Maaret Pyhäjärvi</h2>
 <h5>Pivotal Moments, Pivotal Lessons</h5>
@@ -83,7 +83,6 @@
 <h2>Test Coverage Workshop</h2>
 <p>This 90 minute workshop teaches about test coverage - requirements, code, and risks. We'll work on a small code level exercise and again, you don't have to know code to enjoy the experience. We may do this in java, or in python but that does not really matter.</p>
 </div>
-
 <aside class="col-1-3">
 <div class="speaker-info">
 <img src="maaret-pyhajarvi-square.png" alt="Maaret Pyhäjärvi">
@@ -93,7 +92,20 @@
 <li><a href="https://maaretp.com">maaretp.com</a></li>
 </ul>
 </aside>
+</section>
 
+
+<section class="speaker" id="maaret-ws">
+<div class="col-2-3">
+<h2>Sprint Test Planning Workshop</h2>
+<p>This 90 minute exercise teaches about the change in test planning when we stop thinking in terms of releases in the end and start thinking in shorter increments. I have run this exercise as part of my agile testing course over the years.</p>
+<h2>Automationist's Gambit Workshop</h2>
+<p>This 90 minute exercise teaches exploring with constraint of test automation. We work in python, pytest and playwright, and you don't have to know any of those to enjoy the experience.</p>
+<h2>Exploratory Unit Testing Workshop</h2>
+<p>This 90 minute workshop teaches exploratory testing on unit test level. With something to test, we'll figure out how would we test this. We work in python and pytest, and you don't have to know any of those to enjoy the experience.</p>
+<h2>Test Coverage Workshop</h2>
+<p>This 90 minute workshop teaches about test coverage - requirements, code, and risks. We'll work on a small code level exercise and again, you don't have to know code to enjoy the experience. We may do this in java, or in python but that does not really matter.</p>
+</div>
 </section>
 
 <footer class="primary-footer container group">
