--- a/silverjubilee/speakers.html
+++ b/silverjubilee/speakers.html
@@ -37,7 +37,7 @@
 <section class="row-alt">
 <div class="lead container">
 <h1>Speakers</h1>
-<p>An inspiration extravaganza on career and professionalism in software industry.</p>
+<p>An inspiration collection on career and professionalism in software and testing.</p>
 </div>
 </section>
 
