--- a/silverjubilee/index.html
+++ b/silverjubilee/index.html
@@ -76,7 +76,7 @@
 <img src="online-square.png" alt="Online Conference">
 <h3>Free and Online</h3>
 </a>
-<p>Free and online event bridging communities.</p>
+<p>Free and online event connecting communities.</p>
 </section>
 </div>
 </section>
