--- a/silverjubilee/speakers.html
+++ b/silverjubilee/speakers.html
@@ -73,8 +73,8 @@
 <h5>Pivotal Moments, Pivotal Lessons</h5>
 <p>Recounting 25 years, with a common theme (testing in different context) but a lot of different companies, focus points and lessons. In this talk, Maaret looks at themes she has worked on over the years, and what we could learn from her variety of experiences.</p>
 <h5>About Maaret</h5>
-<p>Maaret Pyhäjärvi is an exploratory tester extraordinaire with a day-job at Vaisala as Principal Test Engineer. She is a tester, (polyglot) programmer, speaker, author, and a community facilitator. She has been awarded the two prestigious global testing awards, Most Influential Agile Testing Professional Person 2016 (MIATPP) and EuroSTAR Testing Excellence Award (2020), Tester Worth Appreciating (2022), and selected as Top-100 Most Influential in ICT in Finland 2019-2021. </p>
-</div>
+<p>Maaret Pyhäjärvi is an exploratory tester extraordinaire with a day-job at Vaisala as Principal Test Engineer. She is a tester, (polyglot) programmer, speaker, author, and a community facilitator. She has been awarded the two prestigious global testing awards, Most Influential Agile Testing Professional Person 2016 (MIATPP) and EuroSTAR Testing Excellence Award (2020), Tester Worth Appreciating (2022), and selected as Top-100 Most Influential in ICT in Finland 2019-2021.
+</p>
 <aside class="col-1-3">
 <div class="speaker-info">
 <img src="maaret-pyhajarvi-square.png" alt="Maaret Pyhäjärvi">
@@ -83,6 +83,7 @@
 <li><a href="https://visible-quality.blogspot.fi">visible-quality.blogspot.fi</a></li>
 <li><a href="https://maaretp.com">maaretp.com</a></li>
 </ul>
+</div>
 </aside>
 </section>
 
