--- a/silverjubilee/speakers.html
+++ b/silverjubilee/speakers.html
@@ -54,7 +54,7 @@
 <h5>About Jukka</h5>
 <p>Jukka Talvio works at Nokia HERE in Germany, and was a significant influence on Maaret's career nurturing 
     and framing potential 20 years ago at F-Secure as her manager. With years apart working in different companies, 
-    there is no greater honor for celebration of a Silver Jubilee than having Jukka share his accumulated wisdom.<
+    there is no greater honor for celebration of a Silver Jubilee than having Jukka share his accumulated wisdom.
 </p>
 </div><aside class="col-1-3">
 <div class="speaker-info">
@@ -73,9 +73,13 @@
 <h5>Pivotal Moments, Pivotal Lessons</h5>
 <p>Recounting 25 years, with a common theme (testing in different context) but a lot of different companies, focus points and lessons. In this talk, Maaret looks at themes she has worked on over the years, and what we could learn from her variety of experiences.</p>
 <h5>About Maaret</h5>
-<p>Maaret Pyhäjärvi is an exploratory tester extraordinaire with a day-job at Vaisala as Principal Test Engineer. She is a tester, (polyglot) programmer, speaker, author, and a community facilitator. She has been awarded the two prestigious global testing awards, Most Influential Agile Testing Professional Person 2016 (MIATPP) and EuroSTAR Testing Excellence Award (2020), Tester Worth Appreciating (2022), and selected as Top-100 Most Influential in ICT in Finland 2019-2021.
+<p>Maaret Pyhäjärvi is an exploratory tester extraordinaire with a day-job at Vaisala as Principal 
+    Test Engineer. She is a tester, (polyglot) programmer, speaker, author, and a community facilitator. 
+    She has been awarded the two prestigious global testing awards, Most Influential Agile Testing Professional 
+    Person 2016 (MIATPP) and EuroSTAR Testing Excellence Award (2020), Tester Worth Appreciating (2022), and selected 
+    as Top-100 Most Influential in ICT in Finland 2019-2021.
 </p>
-<aside class="col-1-3">
+</div><aside class="col-1-3">
 <div class="speaker-info">
 <img src="maaret-pyhajarvi-square.png" alt="Maaret Pyhäjärvi">
 <ul>
