--- a/silverjubilee/speakers.html
+++ b/silverjubilee/speakers.html
@@ -94,13 +94,14 @@
 
 <section class="speaker" id="maaret-ws">
 <div class="col-2-3">
-<h2>Sprint Test Planning Workshop</h2>
+<h2>Workshops Mon - Wed</h2>
+<h5>Sprint Test Planning Workshop</h5>
 <p>This 90 minute exercise teaches about the change in test planning when we stop thinking in terms of releases in the end and start thinking in shorter increments. I have run this exercise as part of my agile testing course over the years.</p>
-<h2>Automationist's Gambit Workshop</h2>
+<h5>Automationist's Gambit Workshop</h5>
 <p>This 90 minute exercise teaches exploring with constraint of test automation. We work in python, pytest and playwright, and you don't have to know any of those to enjoy the experience.</p>
-<h2>Exploratory Unit Testing Workshop</h2>
+<h5>Exploratory Unit Testing Workshop</h5>
 <p>This 90 minute workshop teaches exploratory testing on unit test level. With something to test, we'll figure out how would we test this. We work in python and pytest, and you don't have to know any of those to enjoy the experience.</p>
-<h2>Test Coverage Workshop</h2>
+<h5>Test Coverage Workshop</h5>
 <p>This 90 minute workshop teaches about test coverage - requirements, code, and risks. We'll work on a small code level exercise and again, you don't have to know code to enjoy the experience. We may do this in java, or in python but that does not really matter.</p>
 </div>
 </section>
